Refactor KeyStoreSyncService and VaultSecretProvider for improved exception handling, synchronization, and test clarity