@@ -35,6 +35,8 @@ import org.junit.jupiter.api.io.TempDir;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.dbt.ndtp.federator.certificate.manager.config.CertificateProperties;
+import uk.gov.dbt.ndtp.federator.certificate.manager.exception.FileSystemException;
+import uk.gov.dbt.ndtp.federator.certificate.manager.exception.KeyStoreCreationException;
 import uk.gov.dbt.ndtp.federator.certificate.manager.model.dto.CreateKeyResponseDTO;
 import uk.gov.dbt.ndtp.federator.certificate.manager.service.pki.KeyStoreService;
 import uk.gov.dbt.ndtp.federator.certificate.manager.service.pki.VaultSecretProvider;
@@ -112,6 +114,8 @@ class KeyStoreSyncServiceImplTest {
         validTruststoreBytes = realKeyStoreService.createTrustStore(List.of(caPem), "ts-pass");
     }
 
+    // --- syncKeyStoresToFilesystem ---
+
     @Test
     void syncKeyStoresToFilesystem_createsKeystoreAndTruststore() {
         CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
@@ -136,7 +140,6 @@ class KeyStoreSyncServiceImplTest {
 
     @Test
     void syncKeyStoresToFilesystem_skipsUpdateWhenInSync() throws Exception {
-        // Pre-write the keystore and truststore
         Files.write(tempDir.resolve("keystore.p12"), validKeystoreBytes);
         Files.write(tempDir.resolve("truststore.p12"), validTruststoreBytes);
         Files.write(tempDir.resolve("keystore.password"), "ks-pass".getBytes());
@@ -153,7 +156,6 @@ class KeyStoreSyncServiceImplTest {
 
         keyStoreSyncService.syncKeyStoresToFilesystem();
 
-        // Keystore service should not be called since existing files match
         verify(keyStoreService, never()).createKeyStore(any(), any(), any(), any(), any());
         verify(keyStoreService, never()).createTrustStore(any(), any());
     }
@@ -208,7 +210,6 @@ class KeyStoreSyncServiceImplTest {
 
     @Test
     void syncKeyStoresToFilesystem_handlesCorruptExistingKeystore() throws Exception {
-        // Write a corrupt keystore to trigger the catch branch in shouldUpdateKeyStore
         Files.write(tempDir.resolve("keystore.p12"), "corrupt data".getBytes());
 
         CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
@@ -225,13 +226,11 @@ class KeyStoreSyncServiceImplTest {
 
         keyStoreSyncService.syncKeyStoresToFilesystem();
 
-        // Should still create the keystore because corrupt file triggers update
         verify(keyStoreService).createKeyStore(anyString(), anyString(), any(), anyString(), anyString());
     }
 
     @Test
     void syncKeyStoresToFilesystem_handlesCorruptExistingTruststore() throws Exception {
-        // Write a corrupt truststore
         Files.write(tempDir.resolve("truststore.p12"), "corrupt data".getBytes());
 
         CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
@@ -264,18 +263,14 @@ class KeyStoreSyncServiceImplTest {
         keyStoreSyncService.syncKeyStoresToFilesystem();
 
         verify(keyStoreService, never()).createKeyStore(any(), any(), any(), any(), any());
-        // Truststore should still be created since caChain is available
         verify(keyStoreService).createTrustStore(any(), anyString());
     }
 
     @Test
     void syncKeyStoresToFilesystem_updatesWhenCaChainDiffers() throws Exception {
-        // Pre-write a truststore with 1 CA cert
         Files.write(tempDir.resolve("truststore.p12"), validTruststoreBytes);
         Files.write(tempDir.resolve("truststore.password"), "ts-pass".getBytes());
 
-        // Now vault returns 2 CA certs (different from what was written)
-        // This doesn't need actual 2 different certs; the size mismatch triggers update
         when(vaultSecretProvider.getCertificate()).thenReturn(null);
         when(vaultSecretProvider.getKeyPair()).thenReturn(null);
         when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem, caPem));
@@ -286,6 +281,259 @@ class KeyStoreSyncServiceImplTest {
 
         verify(keyStoreService).createTrustStore(any(), anyString());
     }
+
+    @Test
+    void syncKeyStoresToFilesystem_passwordFileAlreadyInSync() throws Exception {
+        Files.write(tempDir.resolve("keystore.password"), "ks-pass".getBytes());
+        Files.write(tempDir.resolve("truststore.password"), "ts-pass".getBytes());
+
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(validKeystoreBytes);
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        assertTrue(Files.exists(tempDir.resolve("keystore.password")));
+        assertTrue(Files.exists(tempDir.resolve("truststore.password")));
+    }
+
+    @Test
+    void syncKeyStoresToFilesystem_handlesEmptyCaChainInKeystore() {
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+        byte[] ksNoCaChain = realKeyStoreService.createKeyStore(
+                privateKeyPem, certPem, Collections.emptyList(), "ks-pass", "federator");
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(Collections.emptyList());
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(ksNoCaChain);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(keyStoreService).createKeyStore(anyString(), anyString(), any(), anyString(), anyString());
+    }
+
+    // --- validateKeyStore: KeyStoreCreationException ---
+
+    @Test
+    void syncKeyStoresToFilesystem_throwsKeyStoreCreationExceptionForInvalidKeystoreBytes() {
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(new byte[] {0x00, 0x01, 0x02});
+
+        KeyStoreCreationException ex = assertThrows(KeyStoreCreationException.class, () -> {
+            keyStoreSyncService.syncKeyStoresToFilesystem();
+        });
+
+        assertEquals("Failed to validate generated keystore", ex.getMessage());
+        assertNotNull(ex.getCause());
+    }
+
+    @Test
+    void syncKeyStoresToFilesystem_throwsKeyStoreCreationExceptionWhenAliasMissing() {
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        // Build a keystore with a different alias so "federator" is missing
+        byte[] wrongAliasKeystore =
+                realKeyStoreService.createKeyStore(privateKeyPem, certPem, List.of(caPem), "ks-pass", "wrong-alias");
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(wrongAliasKeystore);
+
+        KeyStoreCreationException ex = assertThrows(KeyStoreCreationException.class, () -> {
+            keyStoreSyncService.syncKeyStoresToFilesystem();
+        });
+
+        assertTrue(ex.getMessage().contains("Generated keystore missing expected alias: federator"));
+        assertNull(ex.getCause());
+    }
+
+    // --- validateTrustStore: KeyStoreCreationException ---
+
+    @Test
+    void syncKeyStoresToFilesystem_throwsKeyStoreCreationExceptionForInvalidTruststoreBytes() {
+        when(vaultSecretProvider.getCertificate()).thenReturn(null);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(null);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(new byte[] {0x00, 0x01, 0x02});
+
+        KeyStoreCreationException ex = assertThrows(KeyStoreCreationException.class, () -> {
+            keyStoreSyncService.syncKeyStoresToFilesystem();
+        });
+
+        assertEquals("Failed to validate generated truststore", ex.getMessage());
+        assertNotNull(ex.getCause());
+    }
+
+    // --- writePasswordToFile: FileSystemException ---
+
+    @Test
+    void syncKeyStoresToFilesystem_propagatesFileSystemExceptionFromPasswordWrite() {
+        FileSystemService mockFs = mock(FileSystemService.class);
+        KeyStoreSyncServiceImpl serviceWithMockFs =
+                new KeyStoreSyncServiceImpl(certificateProperties, vaultSecretProvider, keyStoreService, mockFs);
+
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(validKeystoreBytes);
+        when(mockFs.needsUpdate(any(), any())).thenReturn(true);
+        doNothing().when(mockFs).atomicWrite(any(), any());
+        doThrow(new FileSystemException("disk full")).when(mockFs).write(any(), any());
+
+        FileSystemException ex = assertThrows(FileSystemException.class, () -> {
+            serviceWithMockFs.syncKeyStoresToFilesystem();
+        });
+
+        assertEquals("disk full", ex.getMessage());
+    }
+
+    // --- shouldUpdateKeyStore edge cases ---
+
+    @Test
+    void syncKeyStoresToFilesystem_updatesWhenExistingKeystoreHasDifferentKey() throws Exception {
+        // Write a keystore with a different key pair
+        KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
+        kpg.initialize(2048);
+        KeyPair differentKeyPair = kpg.generateKeyPair();
+        String differentPrivateKeyPem =
+                PemUtil.toPem("PRIVATE KEY", differentKeyPair.getPrivate().getEncoded());
+        String differentPublicKeyPem =
+                PemUtil.toPem("PUBLIC KEY", differentKeyPair.getPublic().getEncoded());
+
+        byte[] existingKs = realKeyStoreService.createKeyStore(
+                differentPrivateKeyPem, certPem, List.of(caPem), "ks-pass", "federator");
+        Files.write(tempDir.resolve("keystore.p12"), existingKs);
+
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(validKeystoreBytes);
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(keyStoreService).createKeyStore(anyString(), anyString(), any(), anyString(), anyString());
+    }
+
+    @Test
+    void syncKeyStoresToFilesystem_updatesWhenExistingKeystoreHasDifferentChainLength() throws Exception {
+        // Existing keystore has no CA chain, new one has one
+        byte[] existingKs = realKeyStoreService.createKeyStore(
+                privateKeyPem, certPem, Collections.emptyList(), "ks-pass", "federator");
+        Files.write(tempDir.resolve("keystore.p12"), existingKs);
+
+        CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
+                .publicKeyPem("pub")
+                .privateKeyPem(privateKeyPem)
+                .build();
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
+                .thenReturn(validKeystoreBytes);
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(keyStoreService).createKeyStore(anyString(), anyString(), any(), anyString(), anyString());
+    }
+
+    // --- shouldUpdateTrustStore edge cases ---
+
+    @Test
+    void syncKeyStoresToFilesystem_updatesWhenTruststoreHasDifferentCert() throws Exception {
+        // Generate a different CA cert
+        KeyPairGenerator kpg = KeyPairGenerator.getInstance("RSA");
+        kpg.initialize(2048);
+        KeyPair differentCaKeyPair = kpg.generateKeyPair();
+        X500Name differentCaName = new X500Name("CN=DifferentCA");
+        long now = System.currentTimeMillis();
+        ContentSigner signer = new JcaContentSignerBuilder("SHA256withRSA").build(differentCaKeyPair.getPrivate());
+        X509v3CertificateBuilder builder = new JcaX509v3CertificateBuilder(
+                differentCaName,
+                BigInteger.valueOf(now + 99),
+                new Date(now),
+                new Date(now + 1000000),
+                differentCaName,
+                differentCaKeyPair.getPublic());
+        X509Certificate differentCaCert = new JcaX509CertificateConverter().getCertificate(builder.build(signer));
+        String differentCaPem = PemUtil.toPem("CERTIFICATE", differentCaCert.getEncoded());
+
+        // Write truststore with the different CA
+        byte[] existingTs = realKeyStoreService.createTrustStore(List.of(differentCaPem), "ts-pass");
+        Files.write(tempDir.resolve("truststore.p12"), existingTs);
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(null);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(null);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(keyStoreService).createTrustStore(any(), anyString());
+    }
+
+    @Test
+    void syncKeyStoresToFilesystem_updatesWhenTruststoreMissingAlias() throws Exception {
+        // Create a truststore with a non-standard alias scheme
+        java.security.KeyStore ks = java.security.KeyStore.getInstance("PKCS12");
+        ks.load(null, "ts-pass".toCharArray());
+        X509Certificate caCert = PemUtil.parseCertificate(caPem);
+        ks.setCertificateEntry("nonstandard-alias", caCert);
+        java.io.ByteArrayOutputStream baos = new java.io.ByteArrayOutputStream();
+        ks.store(baos, "ts-pass".toCharArray());
+        Files.write(tempDir.resolve("truststore.p12"), baos.toByteArray());
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(null);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(null);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(keyStoreService).createTrustStore(any(), anyString());
+    }
+
+    // --- resolvePassword ---
 
     @Test
     void resolvePassword_usesConfiguredPassword() {
@@ -304,7 +552,7 @@ class KeyStoreSyncServiceImplTest {
 
     @Test
     void resolvePassword_generatesNewPassword() {
-        when(vaultSecretProvider.getSecret("suffix")).thenReturn(null);
+        when(vaultSecretProvider.getSecret("suffix")).thenReturn(Collections.emptyMap());
 
         String result = keyStoreSyncService.resolvePassword(null, "suffix");
         assertNotNull(result);
@@ -331,10 +579,20 @@ class KeyStoreSyncServiceImplTest {
     }
 
     @Test
-    void syncKeyStoresToFilesystem_passwordFileAlreadyInSync() throws Exception {
-        // Write matching password files first
-        Files.write(tempDir.resolve("keystore.password"), "ks-pass".getBytes());
-        Files.write(tempDir.resolve("truststore.password"), "ts-pass".getBytes());
+    void resolvePassword_emptyStringFetchesFromVault() {
+        when(vaultSecretProvider.getSecret("suffix")).thenReturn(Map.of("password", "vault-pass"));
+
+        String result = keyStoreSyncService.resolvePassword("", "suffix");
+        assertEquals("vault-pass", result);
+    }
+
+    // --- writePasswordToFile with null parent path ---
+
+    @Test
+    void syncKeyStoresToFilesystem_writesPasswordWhenStorePathHasNoParent() {
+        // Use a destination with a relative file name that has no parent
+        CertificateProperties.Destination dest = certificateProperties.getDestination();
+        dest.setPath(tempDir.toString());
 
         CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
                 .publicKeyPem("pub")
@@ -348,32 +606,58 @@ class KeyStoreSyncServiceImplTest {
                 .thenReturn(validKeystoreBytes);
         when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(validTruststoreBytes);
 
-        keyStoreSyncService.syncKeyStoresToFilesystem();
-
-        // Password files exist and match, so write should not be called for them
-        // (they were already in sync)
-        assertTrue(Files.exists(tempDir.resolve("keystore.password")));
-        assertTrue(Files.exists(tempDir.resolve("truststore.password")));
+        assertDoesNotThrow(() -> keyStoreSyncService.syncKeyStoresToFilesystem());
     }
 
+    // --- password resolution during sync (no configured password) ---
+
     @Test
-    void syncKeyStoresToFilesystem_handlesEmptyCaChainInKeystore() {
-        // Keystore with no CA chain
+    void syncKeyStoresToFilesystem_resolvesPasswordFromVaultWhenNotConfigured() {
+        CertificateProperties.Destination dest = certificateProperties.getDestination();
+        dest.setKeystorePassword(null);
+        dest.setTruststorePassword(null);
+
+        when(vaultSecretProvider.getSecret("keystore-password")).thenReturn(Map.of("password", "vault-ks-pass"));
+        when(vaultSecretProvider.getSecret("truststore-password")).thenReturn(Map.of("password", "vault-ts-pass"));
+
         CreateKeyResponseDTO keyPair = CreateKeyResponseDTO.builder()
                 .publicKeyPem("pub")
                 .privateKeyPem(privateKeyPem)
                 .build();
-        byte[] ksNoCaChain = realKeyStoreService.createKeyStore(
-                privateKeyPem, certPem, Collections.emptyList(), "ks-pass", "federator");
 
         when(vaultSecretProvider.getCertificate()).thenReturn(certPem);
         when(vaultSecretProvider.getKeyPair()).thenReturn(keyPair);
-        when(vaultSecretProvider.getCaChain()).thenReturn(Collections.emptyList());
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of(caPem));
+
+        byte[] ksBytes = realKeyStoreService.createKeyStore(
+                privateKeyPem, certPem, List.of(caPem), "vault-ks-pass", "federator");
+        byte[] tsBytes = realKeyStoreService.createTrustStore(List.of(caPem), "vault-ts-pass");
         when(keyStoreService.createKeyStore(anyString(), anyString(), any(), anyString(), anyString()))
-                .thenReturn(ksNoCaChain);
+                .thenReturn(ksBytes);
+        when(keyStoreService.createTrustStore(any(), anyString())).thenReturn(tsBytes);
 
         keyStoreSyncService.syncKeyStoresToFilesystem();
 
-        verify(keyStoreService).createKeyStore(anyString(), anyString(), any(), anyString(), anyString());
+        assertTrue(Files.exists(tempDir.resolve("keystore.p12")));
+        assertTrue(Files.exists(tempDir.resolve("truststore.p12")));
+    }
+
+    @Test
+    void syncKeyStoresToFilesystem_generatesAndPersistsPasswordWhenNotInVault() {
+        CertificateProperties.Destination dest = certificateProperties.getDestination();
+        dest.setKeystorePassword(null);
+        dest.setTruststorePassword(null);
+
+        when(vaultSecretProvider.getSecret("keystore-password")).thenReturn(Collections.emptyMap());
+        when(vaultSecretProvider.getSecret("truststore-password")).thenReturn(Collections.emptyMap());
+
+        when(vaultSecretProvider.getCertificate()).thenReturn(null);
+        when(vaultSecretProvider.getKeyPair()).thenReturn(null);
+        when(vaultSecretProvider.getCaChain()).thenReturn(List.of());
+
+        keyStoreSyncService.syncKeyStoresToFilesystem();
+
+        verify(vaultSecretProvider).persistSecret(eq("keystore-password"), any());
+        verify(vaultSecretProvider).persistSecret(eq("truststore-password"), any());
     }
 }
